# browser-ml-inference

./: .gitignore  TrainEmotions.ipynb  convert_llama_conf.yaml  convert_llama_model.py  package-lock.json  package.json  pyproject.toml  requirements.txt  train_emotions_model.py  train_emotions_model_llama.py
logs/: job-onnx-llama-260079.error  job-onnx-llama-260079.output  job-onnx-og-261220.error  job-onnx-og-261220.output
src/: inference.js
