[project]
name = "browser-ml-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.1.1",
    "evaluate>=0.4.6",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers[torch]>=4.57.0",
]
